fixed alignment to make everything align from left, should be better for different screensizes

--- a/css/main.css
+++ b/css/main.css
@@ -86,31 +86,36 @@ path {
 #value_sort_label {
   position: absolute;
   top: 0px;
-  right: 651px;
+  /*right: 651px;*/
+  left: 416px;
 }
 
 #item_sort_label{
   position: absolute;
   top: 17px;
-  right: 687px;
+  /*right: 687px;*/
+  left: 416px;
 }
 
 #cost_sort_label{
   position: absolute;
   top: 34px;
-  right: 689px;
+  left: 416px;
+  /*right: 689px;*/
 }
 
 #item_filter{
   position: absolute;
   top: 25px;
-  right: 180px;
+  left: 900px;
+  /*right: 180px;*/
 }
 
 #hero_filter{
   position:absolute;
   top: 425px;
-  right: 150px;
+  left: 750px;
+  /*right: 150px;*/
 }
 
 /*tooltip styles*/
